added about page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,12 @@
 index.main.callout=Bootstrap starter template
+
+#Navbar properties
+navbar.about.text=About
+navbar.home.text=Home
+
+#Copy about properties
+copy.h1.text=Who we are
+copy.p.lead=We are a group of Masters students who has the goal of helping organisations deliver business value \
+  faster, through technology, while having fun
+copy.project.lead.intro=I am a master's student in San Jose State University pursuing Software Engineering with specialization in Enterprise Software Development. After getting a proper insight to the Information Technology and Software industry, I was excited to educate myself more by learning the trending and hot technologies being developed all around the world. 
+copy.viewdetails.button=View details >>
