added feedback functionality

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,6 +3,7 @@ index.main.callout=Bootstrap starter template
 #Navbar properties
 navbar.about.text=About
 navbar.home.text=Home
+navbar.context.text=Contact us
 
 #Copy about properties
 copy.h1.text=Who we are
@@ -10,3 +11,14 @@ copy.p.lead=We are a group of Masters students who has the goal of helping organ
   faster, through technology, while having fun
 copy.project.lead.intro=I am a master's student in San Jose State University pursuing Software Engineering with specialization in Enterprise Software Development. After getting a proper insight to the Information Technology and Software industry, I was excited to educate myself more by learning the trending and hot technologies being developed all around the world. 
 copy.viewdetails.button=View details >>
+
+#Contact page properties
+contact.h1.text =We value your feedback
+contact.p.lead=Please let us know what you think
+form.email=Email
+form.firstname=First Name
+form.lastname=Last Name
+contact.feedback.form.text=Your Feedback
+form.submit=Submit
+
+
