added login form and controller

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -4,6 +4,7 @@ index.main.callout=Bootstrap starter template
 navbar.about.text=About
 navbar.home.text=Home
 navbar.context.text=Contact us
+navbar.login.text=Log In
 
 #Copy about properties
 copy.h1.text=Who we are
@@ -20,5 +21,11 @@ form.firstname=First Name
 form.lastname=Last Name
 contact.feedback.form.text=Your Feedback
 form.submit=Submit
+
+#login page properties
+login.h1.text=Please Sign in
+login.p.lead=Please sign in to create or submit great surveys
+login.username.text=Username
+login.password.text=Password
 
 
