--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -28,4 +28,8 @@ login.p.lead=Please sign in to create or submit great surveys
 login.username.text=Username
 login.password.text=Password
 
+# This is the payload section
+payload.h1.text=You've got the juice!
+payload.p.lead=If you can see this page it means you're logged in
+
 
