added spring security

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,7 +3,7 @@ index.main.callout=Bootstrap starter template
 #Navbar properties
 navbar.about.text=About
 navbar.home.text=Home
-navbar.context.text=Contact us
+navbar.contact.text=Contact us
 navbar.login.text=Log In
 
 #Copy about properties
@@ -22,14 +22,17 @@ form.lastname=Last Name
 contact.feedback.form.text=Your Feedback
 form.submit=Submit
 
-#login page properties
-login.h1.text=Please Sign in
-login.p.lead=Please sign in to create or submit great surveys
+# This is the login form section
+login.h1.text=Please Sign In
+login.p.lead=Please Sign In to access DevOps great features!
 login.username.text=Username
 login.password.text=Password
+login.error.message=An error occurred while logging in
+login.logout.success=You've successfully logged out
 
 # This is the payload section
 payload.h1.text=You've got the juice!
 payload.p.lead=If you can see this page it means you're logged in
+navbar.logout.text=Logout
 
 
