updated UI elements like home page and added signup link on login page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,12 +8,15 @@ index.main.callout=Bootstrap starter template
 index.p.lead=This is the DevOps Buddy landing page
 index.pro.membership=Pro Membership
 index.pro.signup.button=Sign up with Pro
+home.heading=SURVEY APP
+home.subheading=You Want to Create a Survey or Share a Survey or Take a Survey, Welcome to Survey App- One place to do it all...
 
 #Navbar properties
 navbar.about.text=About
 navbar.home.text=Home
 navbar.contact.text=Contact us
 navbar.login.text=Log In
+navbar.logout.text=Logout
 
 #Copy about properties
 copy.h1.text=Who we are
@@ -42,7 +45,6 @@ login.logout.success=You've successfully logged out
 # This is the payload section
 payload.h1.text=You've got the juice!
 payload.p.lead=If you can see this page it means you're logged in
-navbar.logout.text=Logout
 
 # Forgot My Password section
 
@@ -70,4 +72,6 @@ signup.form.error.email.already.exists=Email (already taken)
 signup.profile.created.success=Thank You. Your profile has been created.
 signup.profile.created.error=An error has occurred while creating your profile
 signup.form.profile.image.url=You can upload your profile image
+login.page.signup.link=Or Create an Account
+
 
