--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -36,7 +36,7 @@ form.submit=Submit
 
 # This is the login form section
 login.h1.text=Please Sign In
-login.p.lead=Please Sign In to access DevOps great features!
+login.p.lead=Please Sign In to access Survey App features!
 login.username.text=Username
 login.password.text=Password
 login.error.message=An error occurred while logging in
@@ -60,7 +60,7 @@ resetPassword.token.invalid=The URL that you have clicked doesn't appear to be v
 
 # This is the signup section
 signup.form.confirm.password=Confirm Password
-signup.h1.basic.profile=Sign Up for a Basic Account
+signup.h1.basic.profile=Sign Up for an Account
 signup.h1.pro.profile=Sign Up for a Pro Account
 signup.form.username=Choose your username
 signup.form.password=Password
@@ -73,5 +73,12 @@ signup.profile.created.success=Thank You. Your profile has been created.
 signup.profile.created.error=An error has occurred while creating your profile
 signup.form.profile.image.url=You can upload your profile image
 login.page.signup.link=Or Create an Account
+verify.account.email.text = Please enter this code to verify the account
+verification.page.heading=Enter verification code recieved in email
+verification.submit.text=Verify Account
+form.verification.code=Verification Code
+signup.verify.link.text=Click here and enter your verification code to proceed
+signup.verify.button.text=Verify Account
+login.account.creation.success=Hurray!! Account verified. Please login
 
 
