added surveyor and surveyee home pages and navbars

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -41,6 +41,7 @@ login.username.text=Username
 login.password.text=Password
 login.error.message=An error occurred while logging in
 login.logout.success=You've successfully logged out
+login.account.creation.success=Hurray!! Account verified. Please login
 
 # This is the payload section
 payload.h1.text=You've got the juice!
@@ -79,6 +80,17 @@ verification.submit.text=Verify Account
 form.verification.code=Verification Code
 signup.verify.link.text=Click here and enter your verification code to proceed
 signup.verify.button.text=Verify Account
-login.account.creation.success=Hurray!! Account verified. Please login
+home.welcome.message=Welcome to Survery App
+home.second.message=Do you want to continue as...
+
+
+#Payload
+payload.surveyor.button.text=Surveyor
+payload.surveyee.button.text=Surveyee
+payload.explain.button=Click here to create surveys or view results
+payload.explain.surveyee.button=Click here to take surveys
+navbar.change.role.text=Change Role
+navbar.create.survey.text=Create Survey
+navbar.take.survey.text=Take Survey
 
 
