--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -58,6 +58,7 @@ resetPassword.success.message=Your password has been successfully set
 resetPassword.p.lead=Enter your new password
 resetPassword.token.expired=Your token has expired. Please visit the Forgot My Password link again.
 resetPassword.token.invalid=The URL that you have clicked doesn't appear to be valid
+surveytoken.email.text=Please click on the link below to start the survey
 
 # This is the signup section
 signup.form.confirm.password=Confirm Password
