--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -104,4 +104,7 @@ edit.survey.subheading=Got your break?coffee? now, let the work presume
 save.question.button.text=Save Question
 publish.survey.button.text=Publish Survey
 
-
+#Stats
+survey.stats.heading=Statistics
+survey.stats.heading1=Survey Stats
+survey.stats.questions=Question stats
