till close survey send email part

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -103,5 +103,13 @@ edit.survey.heading=Welcome back
 edit.survey.subheading=Got your break?coffee? now, let the work presume
 save.question.button.text=Save Question
 publish.survey.button.text=Publish Survey
+setsurvey.surveytype.dropdown.text=Survey Type
+save.survey.button.text=Save Survey
+general.survey.publish.link.test=Click on this URL link to open survey
+general.survey.publish.heading=Congratulations!!!
+general.survey.publish.subheading=You have successfully published your survey, share this link with surveyees
+general.survey.publish.button.text=Go back to Home
+close.survey.publish.heading=Congratulations
+close.survey.publish.subheading=Enter the email addresses of Surveyees, an email with the link to survey will be sent to them on provided email address
 
 
