--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -129,3 +129,4 @@ edit.survey.list.subheading=Click on survey to edit it
 edit.survey.question.heading=Edit Questions
 edit.survey.question.subheading=Click on the question to edit 
 delete=Delete
+edit.survey.addquestion.button.text=Click here to Add Questions or Publish Survey
