Fixing bugs in the journey

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -130,3 +130,4 @@ edit.survey.question.heading=Edit Questions
 edit.survey.question.subheading=Click on the question to edit 
 delete=Delete
 edit.survey.addquestion.button.text=Click here to Add Questions or Publish Survey
+survey.name.exists=Survey Name already Exists, please enter unique name
